--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -979,18 +979,18 @@
  infantry_weapons_school: "Infantry Weapons School"
  infantry_weapons_school_desc: "Designed to train infantrymen to efficiently employ all the weapons they have access too, at both the squad, platoon, and company levels."
  environment_schools: "Environment Survival Schools"
- environment_schools_desc: "In order to let our soliders fight in all terrain, we must first train them to survive, and then utilize, their enviornment."
+ environment_schools_desc: "In order to let our soliders fight in all terrain, we must first train them to survive, and then utilize, their environment."
  mountain_school: "Mountain Warfare School"
  mountain_school_desc: "This school teaches soldiers all about survival, movement, and fighting in the mountains."
  jungle_school: "Jungle Warfare School"
- jungle_school_desc: "The harshest enviornment in the world can still be survived, and fought in, with proper training."
+ jungle_school_desc: "The harshest environment in the world can still be survived, and fought in, with proper training."
  arctic_school: "Arctic Warfare School"
- arctic_school_desc: "Teaching soliders to fight and survive in the brutal cold will give us an advantage when conducting winter or nordic operations."
+ arctic_school_desc: "Teaching soldiers to fight and survive in the brutal cold will give us an advantage when conducting winter or nordic operations."
  desert_school: "Desert Warfare School"
- desert_school_desc: "The hot, dry deserts can be conquered, with proper training and prepration."
+ desert_school_desc: "The hot, dry deserts can be conquered, with proper training and preparation."
  establish_leadership_schools: "Leadership Academies"
  establish_leadership_schools_desc: "Leaders aren't born; they are made, and we must strive to make the best ones we can for our military needs."
- nco_training: "Non-Comissioned Officer Academy"
+ nco_training: "Non-Commissioned Officer Academy"
  nco_training_desc: "By opening and using a NCO Academy, we can standardize and streamline the training of our low level leadership."
  basic_nco_training: "Basic NCO Training"
  basic_nco_training_desc: "By minimizing the training our NCOs go through, we can quickly get more leaders through the course, and better train them to quickly obey the commands of their officers."
@@ -1003,15 +1003,15 @@
  green_to_gold_focus: "Green to Gold"
  green_to_gold_focus_desc: "By encouraging those NCOs who excel to attend officer training, we can get experienced, well trained officers from the ranks of our best soldiers."
  officer_training: "Officer Academy"
- officer_training_desc: "By providing education and training to our comissioned officers, we can make them as smart and prepared as possible."
+ officer_training_desc: "By providing education and training to our commissioned officers, we can make them as smart and prepared as possible."
  basic_officer_training: "Basic Officer Training"
  basic_officer_training_desc: "By quickly teaching and preparing our officers for command, we can let our SNCOs and experience guide them after they finish their education."
  advanced_officer_training: "Advanced Officer Training"
- advanced_officer_training_desc: "Even if it takes more time, throughly educating, training, and preparing our officers for all aspects of command will pay off in the long term."
+ advanced_officer_training_desc: "Even if it takes more time, thoroughly education, training, and preparing our officers for all aspects of command will pay off in the long term."
  officer_career_path: "Officer Career Paths"
  officer_career_path_desc: "By encouraging our officers to further their education and careers, we can best prepare them for the future of modern conflict."
- specalized_officers: "Officer Specalization"
- specalized_officers_desc: "By directing our officers to pick specalties and to focus their training, we will have high quailty officers who are ready to fulfill their specalized roles to the best of their ability."
+ specialized_officers: "Officer Specialization"
+ specialized_officers_desc: "By directing our officers to pick specalties and to focus their training, we will have high quailty officers who are ready to fulfill their specalized roles to the best of their ability."
  generalized_officers: "Officer Generatization"
  generalized_officers_desc: "By making sure our officers have a diverse education and experience, we will be able to assign any officer to any assignment, and have them be prepared to fulfill that role."
  comdoc: "Combat Doctrine"
