--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1081,7 +1081,7 @@
  counter_punch: "Counter Punch"
  counter_punch_desc: "With a focus on rapid counter attacks, our defensive doctrine will revolve around meeting the enemy head on and destroying them there."
  collapsing_defense: "Collapsing Defense"
- collapsing_defense_desc: "Our armies will fight a rolling battle, slowly retreating into stronger and stronger positions, to attrit our enemy to the point they can no longer fight."
+ collapsing_defense_desc: "Our armies will fight a rolling battle, slowly retreating into stronger and stronger positions, to attract your enemy to the point they can no longer fight."
  flexible_defensive_lines: "Flexible Defensive Lines"
  flexible_defensive_lines_desc: "With lines designed to give and move, it will be much harder for enemy forces to breach our lines."
  defence_in_depth: "Defence In Depth"
@@ -1092,14 +1092,14 @@
  unconventional_focus_desc: "Our military takes a focus on unconventional warfare, training other militaries, conducting counter-terror, COIN, and peacekeeping operations."
  hearts_and_minds: "Hearts and Minds"
  hearts_and_minds_desc: "By winning the hearts and minds of the people we support, we will have a greater chance to defeat enemy insurgent forces."
- shield_the_innocent: "Shield the Innocnent"
+ shield_the_innocent: "Shield the Innocent"
  shield_the_innocent_desc: "Our forces are in country to protect those who cannot protect themselves."
  self_defense_fighting: "Self Defense Fighting"
  self_defense_fighting_desc: "When attacked, our forces will defend themselves, but they will not be used to attack the enemy."
  peace_through_firepower: "Peace Through Firepower"
  peace_through_firepower_desc: "The only way to have peace is to force your opponent to stop fighting. Superior firepower on the battlefield is the answer."
  limited_air_support: "Limited Air Support"
- limited_air_support_desc: "By assigning more aircraft to peacekeeping and counter-insurgency missions, we can guarentee air support to the locations we need it to be."
+ limited_air_support_desc: "By assigning more aircraft to peacekeeping and counter-insurgency missions, we can guarantee air support to the locations we need it to be."
  supply_delivery_options: "Supply Delivery Operations"
  supply_delivery_options_desc: "Ensuring that our allies are properly supplied will be key to helping them win their wars."
  expanded_offensive_options: "Expanded Offensive Options"
@@ -1107,27 +1107,27 @@
  limited_offensive_missions: "Limited Offensive Missions"
  limited_offensive_missions_desc: "Our forces in country are not there to attack, they are there to protect and defend."
  special_forces_advisors: "Special Forces Advisors"
- special_forces_advisors_desc: "Our special forces deatchments will be the best troops we can send, to both advise and train our allies."
+ special_forces_advisors_desc: "Our special forces detachments will be the best troops we can send, to both advise and train our allies."
  unconventional_training: "Unconventional Warfare Training"
- unconventional_training_desc: "Using our special forces as training teams, we can better train a lower quailty force to make them a high quality one."
+ unconventional_training_desc: "Using our special forces as training teams, we can better train a lower quality force to make them a high quality one."
  night_operations_training: "Night Operations Training"
  night_operations_training_desc: "Through proper training, the night will be our ally, not our opponents."
  specfor_air_cover: "Special Forces Air Support"
  specfor_air_cover_desc: "When we deploy special forces units to battlefields, the air cover we send with them will ensure they have the firepower needed to defeat an enemy force."
- deterence_raids: "Deterence Raids"
- deterence_raids_desc: "Using special forces teams to conduct direct action missions, our forces will assist local forces in raiding key targets of the insurgent forces."
+ deterrence_raids: "Deterrence Raids"
+ deterrence_raids_desc: "Using special forces teams to conduct direct action missions, our forces will assist local forces in raiding key targets of the insurgent forces."
  sensitive_site_raids: "Sensitive Site Raids"
  sensitive_site_raids_desc: "By raiding key enemy instillations, our forces will gain valuable intelligence on enemy forces and plans."
  mass_detainment: "Mass Detainment"
- mass_detainment_desc: "By detaining large numbers of civilians during raids, we will be able to interogate and find the enemy insurgents hiding in plain sight."
+ mass_detainment_desc: "By detaining large numbers of civilians during raids, we will be able to interrogate and find the enemy insurgents hiding in plain sight."
  Military_Equipment_Doctrine: "Military Equipment Doctrines"
  Military_Equipment_Doctrine_desc: "Equipment doctrines are based around the types of equipment we have to fight with, and adjusting our fighting accordingly to work best with what we have. By focusing our attention on different equipment, and its development and usage, we can significantly improve our ability to fight an enemy."
- inf_equip_doctrines: "Light Infantry Doctrines"
+ inf_equip_doctrines: "Infantry Doctrines"
  inf_equip_doctrines_desc: "By focusing our light infantry equipment around either light troops or motorized infantry units, we can better focus, train, and equip our infantry for combat operations."
  light_inf_focus: "Light Infantry Doctrine"
  light_inf_focus_desc: "By implementing the decision to use light, dismounted foot infantry, we can reduce fuel costs, and make our infantry forces harder to find by minimizing their supply lines, and making them cheaper to operate."
  moto_inf_focus: "Motorized Infantry Doctrine"
- moto_inf_focus_desc: "Utiziling wheeled vehicles for transport, we can significantly increase the speed and mobility of our infantry forces, while also equipping them with mounted weapons to increase their firepower."
+ moto_inf_focus_desc: "Utilizing wheeled vehicles for transport, we can significantly increase the speed and mobility of our infantry forces, while also equipping them with mounted weapons to increase their firepower."
  mech_inf_equip_doctrines: "Heavy Infantry Doctrines"
  mech_inf_equip_doctrines_desc: "Our armored infantry will need to choose, as will our country: do we utilize lighter and cheaper to produce APCs, or more armed and armored IFVs, but with a higher production cost?"
  apc_focus: "APC Doctrine"
@@ -1137,7 +1137,7 @@
  fire_supp_equip_doctrines: "Fire Support Doctrines"
  fire_supp_equip_doctrines_desc: "Our forces will need strong fire support options in battle, and we will have to pick between two: Assault Guns, or Self Propelled Artillery."
  spg_focus: "Assault Gun Doctrine"
- spg_focus_desc: "By shifting our light tanks from a reconassiance role over to a fire support role, we can provide stronger direct fire support to our infantry units on the field of battle."
+ spg_focus_desc: "By shifting our light tanks from a reconnaissance roll over to a fire support role, we can provide stronger direct fire support to our infantry units on the field of battle."
  spart_focus: "Self Propelled Artillery Doctrine"
  spart_focus_desc: "With a focus on developing indirect fire support options, we can allow our forces to have effective artillery units to provide indirect fire support, dispersed across multiple units."
  heavy_equip_doctrines: "Heavy Equipment Doctrines"
@@ -1145,7 +1145,7 @@
  mbt_focus: "Main Battle Tank Doctrine"
  mbt_focus_desc: "With MBTs as our vanguard, we will be able to punch through even the toughest enemy defences, fighting our way through areas deemed impossible to break through."
  atk_helo_focus: "Attack Helicopter Doctrine"
- atk_helo_focus_desc: "Using the speed, mobility, and firepower avaiable, we will use attack helicopters to punch holes in enemy lines, allowing our forces to rapidly encircle and eliminate enemy forces on the front line."
+ atk_helo_focus_desc: "Using the speed, mobility, and firepower available, we will use attack helicopters to punch holes in enemy lines, allowing our forces to rapidly encircle and eliminate enemy forces on the front line."
  hunter_killer_teams: "Hunter-Killer Teams"
  hunter_killer_teams_desc: "By teaming our helicopter gunships off in pairs, they will be able to more easily spread out, hunting and destroying targets as a team."
  gunship_strike_force: "Gunship Strike Forces"
@@ -1157,11 +1157,11 @@
  infantry_hunter_focus: "Infantry Hunters"
  infantry_hunter_focus_desc: "Taking advantage of their speed, mobility, and firepower, our attack helicopters will be trained and equipped to blast holes through enemy infantry formations."
  eye_in_the_sky: "Eye in the Sky"
- eye_in_the_sky_dsec: "Trained not only for offensive operations, but reconassisance, our gunship crews will gather valuable intelligence prior to any attacks."
+ eye_in_the_sky_dsec: "Trained not only for offensive operations, but reconnaissance, our gunship crews will gather valuable intelligence prior to any attacks."
  rapid_exploitation: "Rapid Exploitation"
  rapid_exploitation_desc: "Utilizing their superior mobility, our gunship formations will quickly exploit any breakthroughs, taking advantage to jump on supply lines and wreck havoc behind enemy lines."
  roving_killbox: "Roving Killboxes"
- roving_killbox_desc: "Giving our attack helicopters independence to operate, our gunships will be allowed to manuver as they like in an assigned area. This will allow them to engage targets of opportunity at will."
+ roving_killbox_desc: "Giving our attack helicopters independence to operate, our gunships will be allowed to maneuver as they like in an assigned area. This will allow them to engage targets of opportunity at will."
  static_battle_point: "Battle Point Doctrine"
  static_battle_point_desc: "By assigned our gunships to battle points, and giving them directions to support ground units, we can maximize both our gunship effectiveness, and strengthen our ground forces."
  mobile_firepower: "Mobile Firepower"
@@ -1169,11 +1169,11 @@
  heavy_weapons: "Heavy Weapons"
  heavy_weapons_desc: "By upgrading our support weapons to include larger, and more varied weapons, we can increase the firepower that these assault guns can bring to bear."
  hardened_shell: "Hardened Shell"
- hardened_shell_desc: "By reinforicing the armor on our assault guns, we can make them more durable and able to close with enemy forces."
+ hardened_shell_desc: "By reinforcing the armor on our assault guns, we can make them more durable and able to close with enemy forces."
  steel_beasts: "Steel Beasts"
  steel_beasts_desc: "Our assault guns with be the supporting fire for our line troops, letting us attack into even the most defened of positions."
- maximum_surviveability: "Maximum Surviveability"
- maximum_surviveability_desc: "With a priority on crew protection and vehicle recovery, our vehicles will be able to keep our crews alive, even when they are destroyed."
+ maximum_survivability: "Maximum Survivability"
+ maximum_survivability_desc: "With a priority on crew protection and vehicle recovery, our vehicles will be able to keep our crews alive, even when they are destroyed."
  maximum_destruction: "Maximum Destruction"
  maximum_destruction_desc: "By placing emphasis on more firepower and ammunition inside the vehicle, our systems will be able to fight longer and harder. If some of them join the space program as a result, so be it."
  breakthrough_tanks: "Breakthrough Tanks"
@@ -1181,7 +1181,7 @@
  direct_fire_support: "Direct Fire Support"
  direct_fire_support_desc: "With a focus on providing front line fire support, our light tanks will be able to close with enemy positions, and then directly engage with enemy units and emplacements."
  anti_infantry_support: "Anti-Infantry Focus"
- anti_infantry_support_desc: "With a focus on high explosive and machine gun loadouts, our light tanks will be geared towards eliminiating enemy infantry elements during an attack."
+ anti_infantry_support_desc: "With a focus on high explosive and machine gun loadouts, our light tanks will be geared towards eliminating enemy infantry elements during an attack."
  anti_tank_support: "Anti-Tank Focus"
  anti_tank_support_desc: "By equipping our light tanks with more HEAT and SABOT rounds, we can turn them into mobile tank killers, giving their supported units an edge in battle with enemy armor."
  large_bore_weapons: "Large Bore Weapons"
@@ -1201,19 +1201,19 @@
  rapid_reposition_doctrine: "Rapid Repositioning"
  rapid_reposition_doctrine_desc: "Shooting and scooting, our artillery crews will be trained to quickly fire off their rounds, and then relocate to better protect themselves from counter-battery missions."
  long_range_fires: "Long Range Fires"
- long_range_fires_desc: "By extending the firing range of our systems, we will be able to both keep our guns safter, and also strike deeper into enemy lines with fire missions."
+ long_range_fires_desc: "By extending the firing range of our systems, we will be able to both keep our guns safety, and also strike deeper into enemy lines with fire missions."
  rapid_fire_missions: "Rapid Fire Missions"
- rapid_fire_missions_desc: "Well trained crews, able to act at a moments notice, with significantly minimize the time between a call for fire, and the mission actually being fired."
+ rapid_fire_missions_desc: "Well trained crews, able to act at a moment's notice, with significantly minimize the time between a call for fire, and the mission actually being fired."
  massed_artillery_positions: "Massed Artillery Positions"
- massed_artillery_positions_desc: "By massing our units together, we can concentrate the weight of fire, and bring down massive barages onto enemy positions."
+ massed_artillery_positions_desc: "By massing out units together, we can concentrate the weight of fire, and bring down massive barrages onto enemy positions."
  dispersed_dispositions: "Dispersed Dispositions"
  dispersed_dispositions_desc: "Spread out, dispersed artillery positions will prevent the enemy from easily attack our fire support. This, in turn, will keep them better protected, and allow them to fire more missions to support line troops."
  steel_rain: "Steel Rain"
- steel_rain_desc: "A rain of steel and high explosive shall fall from the heavens, obliteraing any enemy positions that it happens to fall on."
+ steel_rain_desc: "A rain of steel and high explosive shall fall from the heavens, obliterating an enemy positions that it happens to fall on."
  advanced_infantry_training: "Advanced Infantry Training"
- advanced_infantry_training_desc: "By spending time to better train our dismounted infantry, we can gain higher quality soliders who will be better equipped to fight against enemy forces."
+ advanced_infantry_training_desc: "By spending time to better train or dismounted infantry, we can gain higher quality soldiers who will be better equipped to fight against enemy forces."
  platoon_level_tactics: "Platoon Level Tactics"
- platoon_level_tactics_desc: "By focusing on the platoon level for tactical decisions, we can get greater flexability in force usage."
+ platoon_level_tactics_desc: "By focusing on the platoon level for tactical decisions, we can get greater flexibility in force usage."
  company_level_tactics: "Company Level Tactics"
  company_level_tactics_desc: "By focusing on the company level for tactical decisions, we can get greater firepower concentrations against a target."
  expanded_infantry_weapons: "Expanded Infantry Weapons"
@@ -1273,7 +1273,7 @@
  tank_escorts: "Tank Escorts"
  tank_escorts_desc: "With improved speed, mobility, and firepower, our IFVs will be able to keep up with our main battle tanks, and provide them close protection from enemy infantry elements."
  upgunned_ifvs: "Up-Gunned IFVs"
- upgunned_ifvs_desc: "By upgrading the weapon caliber on our IVFs, and letting them utilize better guns and ammo, we can make our IFVs even more deadly."
+ upgunned_ifvs_desc: "By upgrading the weapon caliber on our IFVs, and letting them utilize better guns and ammo, we can make out IFVs even more deadly."
 
  #Air doctrines
  offensive_focus: "Offensive Combined Arms Focus"
