--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1221,7 +1221,7 @@
  city_fighting_operations: "City Fighting Doctrine"
  city_fighting_operations_desc: "By training and drilling on combat operations in urban terrain, we can gain a tactical advantage when fighting against enemy forces in our cities."
  offensive_fighting_doctrine: "Offensive Fighting Doctrine"
- offensive_fighting_doctrine_desc: "By adopting an agressive military mindset for our infantry, we will be able to use even our dismounted troops to attack enemy positions."
+ offensive_fighting_doctrine_desc: "By adopting an aggressive military mindset for our infantry, we will be able to use even our dismounted troops to attack enemy positions."
  defensive_fighting_doctrine: "Defensive Fighting Doctrine"
  defensive_fighting_doctrine_desc: "By adopting a defensive military mindset for our infantry, we will be able to make attacking any of our defended locations and pointless task for our enemies."
  squad_level_anti_tank: "Squad Level Heavy AT"
@@ -1245,23 +1245,23 @@
  improved_protection: "Improved Protection"
  improved_protection_desc: "Improvements in armor protection for our equipment means that both crews and vehicles will be better protected on the field of battle."
  rapid_transport_tactics: "Rapid Transport Tactics"
- rapid_transport_tactics_desc: "With an empahsis on speed and rapid delivery, our APCs will be able to quickly move our troops to the field of battle."
+ rapid_transport_tactics_desc: "With an emphasis on speed and rapid delivery, our APCs will be able to quickly move our troops to the field of battle."
  fire_support_weapons: "Fire Support Weapons"
  fire_support_weapons_desc: "Adding weapons to our APCs will allow them to provide some fire support to their infantry units, even if it is not their primary role."
  armored_vehicle_counter: "Armored Vehicle Counter"
  armored_vehicle_counter_desc: "With the addition of anti-tank equipment to our APCs, they will be able to combat both light to medium armored enemy units."
  mobility_operations: "Mobility Operations"
  mobility_operations_desc: "Instead of fire support, we should focus our APCs on speed and rapid delivery of combat power to the battlefield."
- battle_taxi: "Battle Taxi"
- battle_taxi_desc: "Our APCs are just that: a taxi to the front line, so that our troops can reach the battlefield faster and better protected."
+ battlefield_taxi: "Battlefield Taxi"
+ battlefield_taxi_desc: "Our APCs are just that: a taxi to the front line, so that our troops can reach the battlefield faster and better protected."
  light_ifv: "Light IFV"
- light_ifv_desc: "Our APCs, while still not a full IFV, are well armed and protected, and able to function as a lightly amored fight vehicle."
+ light_ifv_desc: "Our APCs, while still not a full IFV, are well armed and protected, and able to function as a lightly armored fighting vehicle."
  mixed_role_apcs: "Mixed Role APCs"
  mixed_role_apcs_desc: "Our APCs are able to, with a mix of armaments, fill multiple roles on the battlefield. A jack of all trades, master of none."
  dedicated_weapon: "Dedicated Weapon System"
  dedicated_weapon_desc: "By focusing our attention onto a single weapon system, our IFVs can be armed with more ammunition and better focus training."
  multi_role_weapons: "Mixed Weapon Systems"
- multi_role_weapons_desc: "With a mix of different armaments for different targets, our IFVs can engage and destroy any threat they may encouter on the battlefield."
+ multi_role_weapons_desc: "With a mix of different armaments for different targets, our IFVs can engage and destroy any threat they may encounter on the battlefield."
  high_caliber_he: "High Caliber HE"
  high_caliber_he_desc: "By increasing the caliber of our high explosive weapons, we can make our IFVs far more efficient against enemy infantry units."
  anti_tank_options: "Anti-Tank Weapons"
