--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1096,6 +1096,8 @@
  KHM_surgutneftegaz_desc: "One of the largest Russian oil and gas producing companies"
  KHM_surgut_airport: "Surgut Airport"
  KHM_surgut_airport_desc: "We will make a global reconstruction of Surgut Airport"
+ KHM_ecology: "Eliminate the Effects of Oil Pollution"
+ KHM_ecology_desc: "We will fight the consequences of the poor environmental situation in our region"
  KHM_promka: "Investments In Industry"
  KHM_promka_desc: "In addition to the oil and gas industry, we will also develop our industry"
  KHM_small_business: "Small Business Support"
@@ -1108,6 +1110,8 @@
  KHM_rosneft_desc: "We will expand cooperation with this Russian Company"
  KHM_tehnopark: "Sirius B Technopark"
  KHM_tehnopark_desc: "We will open our own technopark to attract investors"
+ KHM_oil_repair: "Start Updating The Oil Infrastructure"
+ KHM_oil_repair_desc: "Our oil infrastructure has reached a critical point, it's time to upgrade it"
 
  KHM_edro: "United Yugra"
  KHM_edro_desc: "Under the leadership of United Russia, our republic is entering a new millennium"
@@ -1203,6 +1207,8 @@
  KHM_social_desc: "Our citizen will have the best social guarantees."
  KHM_media: "Free Media"
  KHM_media_desc: "We will give full freedom to our media."
+ KHM_eco_we: "Clean Ecology"
+ KHM_eco_we_desc: "We will focus on the ecological situation, instead of the endless destruction of nature for the sake of resources."
  KHM_rights: "Rights And Freedoms"
  KHM_rights_desc: "Our citizen is an example of a free person in the post-Soviet space."
  KHM_corruption: "Fight Against Corruption"
@@ -1213,6 +1219,8 @@
  KHM_monorities_desc: "Any minorities on our territory will have maximum autonomy."
  KHM_spend_police: "Reduce Police Funding"
  KHM_spend_police_desc: "We don't need such huge funding for the police."
+ KHM_more_ecology: "Emphasis On Ecology"
+ KHM_more_ecology_desc: "We will continue to restore the ecology of our region, investing new funds in the restoration of flora and fauna."
  KHM_federation: "Federation Within a Federation"
  KHM_federation_desc: "We will show you what a Federation should really look like.."
 
@@ -1226,6 +1234,8 @@
  KHM_salary_desc: "We will encourage people to work and come to us."
  KHM_oil: "Strengthen Geological Exploration"
  KHM_oil_desc: "We will continue to explore the bowels of our republic in search of resources."
+ KHM_oil_infra_new: "Investing in The Repair of Oil Infrastructure"
+ KHM_oil_infra_new_desc: "Our oil infrastructure is very outdated, we intend to invest in its repair and renovation."
  KHM_zavods: "Construction of New Factories"
  KHM_zavods_desc: "We must create new jobs!"
  KHM_five_year_plan: "First Five Year Plan"
@@ -1317,6 +1327,9 @@
  SUB_nat_spirits_added_tt: "§Y[SOV.GetNamewithFlag]§! will also receive this §YNational Spirit§!, since you are its £text_icon_rusgerb §YSubject§!"
  KHM_bund_moscow_tt: "We will start a riot in Moscow"
  scientist_knight: "Knight of Science and Art"
+ SUB_khmao_ecology_0: "Bad Ecology"
+ KHM_bad_oilinfra_idea: "Old Oil Structure"
+
 
  # Focuses and Ideas
  bashkiriya_focus: "Bashkortostan Focus Tree"
