added debuff to TAT and BSH

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -648,6 +648,7 @@
  BSH_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
  BSH_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  BSH_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
+ BSH_clear_air: "Request Participation in The "Clean Air" Program"
 
  TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural"
  TAT_islamic_world_tur: "Russia - The Islamic World: [TUR.GetNameWithFlag]"
@@ -659,11 +660,13 @@
  TAT_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  TAT_world_cuba: "Partnership with: [CUB.GetNameWithFlag]"
  TAT_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
+ TAT_clear_air: "Request Participation in The "Clean Air" Program"
 
  KHM_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
  KHM_world_uzbek: "Partnership with: [CHI.GetNameWithFlag]"
  KHM_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  KHM_world_czech: "Partnership with: [CZE.GetNameWithFlag]"
+ KHM_clear_air: "Request Participation in The "Clean Air" Program"
  
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
  CHE_attack_ukr: "Propose An Attack On [UKR.GetNameWithFlag]"
@@ -861,6 +864,17 @@
  subject_rus.59.t: "[FROM.GetNameWithFlag] Refused To Cooperate"
  subject_rus.59.d: "[FROM.GetNameWithFlag] refused to sign a contract with us for cooperation with our oil and gas industry"
  subject_rus.59.a: "Sad"
+
+ subject_rus.60.t: "[ROOT.GetNameWithFlag] Asks For Help With the Environment"
+ subject_rus.60.d: "[ROOT.GetNameWithFlag]  asks us to allow them to participate in the Clean Air program and invest in the restoration of ecology in their region"
+ subject_rus.60.a: "We Will Help Them"
+ subject_rus.60.b: "No"
+ subject_rus.61.t: "[FROM.GetNameWithFlag] Has Agreed To Help Us With The Environment"
+ subject_rus.61.d: "[FROM.GetNameWithFlag] has agreed to help us with the environment, finances will be allocated and restoration work will begin"
+ subject_rus.61.a: "Nice"
+ subject_rus.62.t: "[FROM.GetNameWithFlag] Refused To Help Us With The Environment
+ subject_rus.62.d: "[FROM.GetNameWithFlag] has refused to help us with the environment, finances will be allocated and restoration work will begin"
+ subject_rus.62.a: "Sad"
 
 
 
@@ -1360,6 +1374,8 @@
  BSH_mining_oil_desc: "Rosneft will invest in oil projects in our republic"
  BSH_mining_gold1: "Gold Extraction"
  BSH_mining_gold1_desc: "We will develop gold mining on the territory of our republic"
+ BSH_oil_repair: "Start Updating The Oil Infrastructure"
+ BSH_oil_repair_desc: "Our oil infrastructure has reached a critical point, it's time to upgrade it"
  BSH_mining_steel: "Steel Production"
  BSH_mining_steel_desc: "We will develop steel mining on the territory of our republic"
  BSH_mining_aluminium: "Aluminium Investments"
