--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -872,7 +872,7 @@
  subject_rus.61.t: "[FROM.GetNameWithFlag] Has Agreed To Help Us With The Environment"
  subject_rus.61.d: "[FROM.GetNameWithFlag] has agreed to help us with the environment, finances will be allocated and restoration work will begin"
  subject_rus.61.a: "Nice"
- subject_rus.62.t: "[FROM.GetNameWithFlag] Refused To Help Us With The Environment
+ subject_rus.62.t: "[FROM.GetNameWithFlag] Refused To Help Us With The Environment"
  subject_rus.62.d: "[FROM.GetNameWithFlag] has refused to help us with the environment, finances will be allocated and restoration work will begin"
  subject_rus.62.a: "Sad"
 
