added armenians to BSH

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1484,6 +1484,8 @@
  BSH_internet_desc: "The Internet will be actively developing in our republic"
  BSH_new_mil: "Full Production Cycle"
  BSH_new_mil_desc: "We will invest heavily in building our own full production cycle of military equipment. In difficult times, it is necessary to wage a long war"
+ BSH_garik: "Let the Armenians in"
+ BSH_garik_desc: "We will allow the Armenian Diaspora to have a large share in local business, in return we will receive a small bribe from them"
  BSH_cur: "Republic Management Center"
  BSH_cur_desc: "Our Republic Management Center will make it easier to control the processes in our native Bashkiria"
  BSH_rosgvardia_spetznaz: "Deploy Rosgvardia Spetznaz"
