--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1360,6 +1360,10 @@
  BSH_factories_desc: "The Ministry of Industry will help us to revive our industry"
  BSH_soda: "Soda Factory"
  BSH_soda_desc: "Soda for everyone!"
+ BSH_rustem: "Rustem Khamitov"
+ BSH_rustem_desc: "It's time to change the head of the republic"
+ BSH_habirov: "Radiy Khabirov"
+ BSH_habirov_desc: "It's time to change the head of the republic"
  BSH_revive_factories: "Revive Factories"
  BSH_revive_factories_desc: "We will revive our factories"
  BSH_troleybus_bus: "NEFAZ"
