--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -843,7 +843,7 @@
  SER_renewed_serbia: "Renewed Serbia!"
  SER_renewed_serbia_desc: "Serbia is finally renewed and has fully come to not be the former shadow of itself!"
  SER_end_isolationism: "Ending Isolationism"
- SER_end_isolationism_desc: "We must stop lour isolation and start interacting with our neighbors."
+ SER_end_isolationism_desc: "We must stop our isolation and start interacting with our neighbors."
  SER_crush_the_old_system: "Crushing the Old System"
  SER_crush_the_old_system_desc: "Old system of governance must be destroyed and new system must be established."
  SER_revive_cefta: "CEFTA Agreement"
@@ -979,10 +979,10 @@
  SerbiaFocus.14.d: "Serbia asks us to invest in them should we agree?"
  SerbiaFocus.14.a: "Sure!"
  SerbiaFocus.14.b: "Sorry, no."
- SerbiaFocus.15.t: "[UAE.GetNamewithFlag] Accepts!"
+ SerbiaFocus.15.t: "[FRA.GetNamewithFlag] Accepts!"
  SerbiaFocus.15.d: "They will invest in us."
  SerbiaFocus.15.a: "Great!"
- SerbiaFocus.16.t: "[UAE.GetNamewithFlag] did not accept our offer."
+ SerbiaFocus.16.t: "[FRA.GetNamewithFlag] did not accept our offer."
  SerbiaFocus.16.d: "They don't want to invest in us."
  SerbiaFocus.16.a: "Ugh."
  SerbiaFocus.13.t: "Serbian War Criminals Arrested in Serbia!"
