locs, effects, etc

--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -44,3 +44,17 @@ TAI_asus_desc: "ASUSTeK Computer Inc. is a Taiwanese multinational computer, pho
 
 TAI_it_and_semiconductor_industry: "IT and Semiconductor Industry"
 TAI_it_and_semiconductor_industry_desc: ""
+TAI_industry: "Economy of the Republic of China"
+TAI_industry_desc: "We need to develop our economy to become stronger."
+TAI_industry_affairs: "Industrial Sector"
+TAI_industry_affairs_desc: ""
+TAI_nspo: "NSPO"
+TAI_nspo_desc: ""
+TAI_expand_construction_faci: "Develop the Construction Sector"
+TAI_expand_construction_faci_desc: ""
+TAI_expand_roads: "Building New Roads"
+TAI_expand_roads_desc: ""
+TAI_tourism: "Tourism"
+TAI_tourism_desc: ""
+TAI_nankang: "NANKANG"
+TAI_nankang_desc: ""
