--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -4137,10 +4137,10 @@
  USA_infantry_weapons3_desc: "M16A4是M16系列的第4代产品。它配备了一个可拆卸的提手和一个全长的四节皮卡汀尼导轨，用于安装光学器件和其他辅助设备。FN M16A4采用保险/半自动/三发点放射击模式，成为美国海军陆战队的标准配发。军方配发的步枪还配备了奈特军械公司的M5 RAS护手，允许安装垂直握把、激光器、战术灯等配件，在美军野战手册中创造了M16A4 MWS（即模块化武器系统）的称号。"
  USA_infantry_weapons4: "M4A1"
  USA_infantry_weapons4_desc: "M4卡宾枪是M16突击步枪短小轻便的变种。M4是一把5.56×45毫米的北约制式，气冷式，直喷式气动操作，弹匣供弹式卡宾枪，它拥有14.5英寸（370毫米）枪管及伸缩式枪托。"
- USA_infantry_weapons6: "MR24"
+ USA_infantry_weapons6: "M7 Spear"
  USA_infantry_weapons6_desc: "一种新的革命性设计，结合了前沿材料和先进的弹道计算机。"
- USA_infantry_weapons5: "Mk-17"
- USA_infantry_weapons5_desc: "Mk 17是一种带旋转枪栓的气动式（短冲程气体活塞）半自动步枪，它的结构十分模块化，包括更换枪管以在不同口径之间进行切换，它由比利时制造商FN Herstal（FNH）为美国特种作战司令部开发的。该步枪由比利时制造商FN Herstal（FNH）为美国特种作战司令部开发，以满足SCAR比赛的要求。SCAR-L代表 \"轻型\"，使用5.56×45mm北约制式子弹，SCAR-H代表 \"重型\"，使用7.62×51mm北约制式子弹。两者都有近距离作战枪管、标准枪管和长枪管三种型号。"
+ USA_infantry_weapons5: "M27 IAR"
+ USA_infantry_weapons5_desc: ""
  USA_infantry_weapons7: "泰坦 APPL"
  USA_infantry_weapons7_desc: "这种武器平台采用了与美国M4系统相同的可靠性，但采用了21世纪独有的技术。该系统不仅重量轻，使用无壳弹药，而且它还利用了小型化磁加速度的变种，有效地使武器成为早期手持混合式轨道枪"
  USA_Anti_Air_0: "FIM-43 红眼"
