--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,11 @@ v1.10.0
   - Added achievement Truly Better than Napoleon: "Before the year 2010 have London, Moscow, Stockholm, Istanbul, Rome, Madrid, Cairo and Tunis under your control"
   - Added achievement Ils sont le fléau des gens occupés: "As France become the sole superpower"
   - Added achievement He who has iron, has bread.: "As Communist France have maximum spending on all laws except Police and Military, and all existing countries in Europe also be communist and subjects of France."
+  - Added achievement U AR Great: "United either the United Arab Republic or the Federation of Arab Republics"
+  - Added achievement Lawrence of Arabia: "As the United Kingdom, send volunteers to the United Arab Republic or the Federation of Arab Republics"
+  - Added achievement In fact, anyone outside of America is technically an A-rab: "As the United Arab Republic or the Federation of Arab Republics, be the only country in addition to the United States to exist"
+  - Added achievement Are You Sure That's Enough?: "Control at least 90% of Arab GDP before unifying the Arabs"
+  - Added achievement But In The Interest of Full Disclosure, I have to say, I hate A-rabs: "Defeat the United Arab Republic or the Federation of Arab Republics in a war"
 
  AI:
   - Reworked AI stockpile, production, and target templates
