quick doctrine update

--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -930,6 +930,10 @@
  concentrated_supply_depots_desc: "With our supplies concentrated in dedicated locations, we can better protect our supplies and better coordinate supply runs to line units."
  combat_supply_theory: "Combat Supply Theory"
  combat_supply_theory_desc: "Our military forces must adopt a single mindset for supply forces in the midst of combat."
+ centralized_maintinance: "Centralized Maintenance Teams"
+ centralized_maintinance_desc: "With a central location for repairs, maintenance, and more, our forces will be able to quickly coordinate the drop off of damaged vehicles to a central point, simplifying supply lines."
+ decentralized_maintinance: "Decentralized Maintenance Teams"
+ decentralized_maintinance_desc: "By dispersing our maintenance teams out into their individual units, we can ensure rapid repair and work performed on vehicles."
  unit_level_supply: "Unit Level Supply"
  unit_level_supply_desc: "By putting the majority of our supplies out in individual combat units, we can sustain combat operations for a longer time."
  joint_supply_theory: "Joint Supply Theory"
